# hiv-bnab

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
coevolution/: populations.py  run.py  run.sh  simulation.py
configs/: scripts_config.yaml  shared_epitope_config.yaml
hiv_code/: __init__.py  bcells.py  concentrations.py  parameters.py  simulation.py  utils.py
notebooks/: paper_figures.ipynb
scripts/: __init__.py  analyze_sweep.py  animate_affinity_distributions.py  clonal_diversity.py  run_simulation.py  shared_epitopes.py  submit_job.py
simulations_for_paper/12_epitope_sweep/: 12_epitope_sweep.yaml
simulations_for_paper/3_epitope_sweep_C_C0/: 3_epitope_sweep_C_C0.yaml
simulations_for_paper/6_epitopes_masking_ntfh_gc_1000/: 6_epitopes_masking_ntfh_gc_1000.yaml
simulations_for_paper/K_sweep/: K_sweep.yaml
simulations_for_paper/egc_noncyclic_plasma_sweep/: egc_noncyclic_plasma_sweep.yaml
simulations_for_paper/egc_plasma_sweep_ntfh_gc_1000/: egc_plasma_sweep_ntfh_gc_1000.yaml
simulations_for_paper/epitope_overlap_3cons_C0_1.0/: epitope_overlap_3cons_C0_1.0.yaml
simulations_for_paper/germline_affinity_sweep/: germline_affinity_sweep.yaml
simulations_for_paper/germline_affinity_sweep_balanced_ntf/: germline_affinity_sweep_balanced_ntf.yaml
simulations_for_paper/masking_sweep_C0_1.0/: masking_sweep_C0_1.0.yaml
simulations_for_paper/ntfh_gc_sweep/: ntfh_gc_sweep.yaml
src/hiv_bnab/: __init__.py  (+4 more)
working_code/: __init__.py  bcells.py  concentrations.py  environment.yml  parameters.py  simulation.py  simulation_code.py  utils.py
(+1 files in other folders)
